{
    "version": 1,
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "711e172e-5f3a-4377-a23f-07ed6345cd25",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "dd0f7d7c-a603-42d8-b9de-c18abeb993c9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseRotate",
                    "type": "Value",
                    "id": "12e7b2e6-432d-4a5b-9aa8-ed31f2826a2b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseLeftButtonPress",
                    "type": "Button",
                    "id": "65d459ff-3237-4d2f-8761-4c672efce0e4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "9683c5f4-ba44-47fc-b91f-b51953342161",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1ff189a6-497d-484f-a78a-96d71b1ce8e8",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dde1616-73df-4215-a810-43b5fd663e56",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c985ee9f-5121-406b-aeca-be0bc78f399f",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftButtonPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd45c792-fb51-4e44-a787-ac694cfa0bc1",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0eed07b4-e63d-49ad-933f-1ab054dcec21",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}